hphp/hack/test/typecheck/meth_caller11.php.legacy.exp
File "meth_caller11.php", line 31, characters 17-23:
Invalid argument (Typing[4110])
File "meth_caller11.php", line 30, characters 13-41:
This is an int
File "meth_caller11.php", line 24, characters 34-45:
It was implicitly typed as an int during this operation
File "meth_caller11.php", line 24, characters 49-49:
It is incompatible with an object of type C
